[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/uiElements/stat.gd" type="Script" id=1]
[ext_resource path="res://Menus/sprites/pbUnder.webp" type="Texture" id=2]
[ext_resource path="res://Menus/sprites/pb.webp" type="Texture" id=3]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 500.0
margin_bottom = 14.0
rect_min_size = Vector2( 500, 21 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblStatName" type="Label" parent="."]
margin_top = 3.0
margin_right = 59.0
margin_bottom = 17.0
size_flags_horizontal = 2
text = "Weapons"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 125.0
margin_right = 375.0
margin_bottom = 21.0
size_flags_horizontal = 4

[node name="btnMinus" type="Button" parent="HBoxContainer"]
margin_right = 21.0
margin_bottom = 21.0
rect_min_size = Vector2( 21, 21 )
text = "-"

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer"]
margin_left = 25.0
margin_right = 225.0
margin_bottom = 21.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
max_value = 10.0
value = 1.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="btnPlus" type="Button" parent="HBoxContainer"]
margin_left = 229.0
margin_right = 250.0
margin_bottom = 21.0
rect_min_size = Vector2( 21, 21 )
text = "+"

[node name="lblCost" type="Label" parent="."]
margin_left = 464.0
margin_top = 3.0
margin_right = 500.0
margin_bottom = 17.0
size_flags_horizontal = 10
text = "$ 100"

[connection signal="pressed" from="HBoxContainer/btnMinus" to="." method="_on_btnMinus_pressed"]
[connection signal="pressed" from="HBoxContainer/btnPlus" to="." method="_on_btnPlus_pressed"]
